force-app/main/default/objects/PBS_AAAP_Offer_Deselect_Reject_Reasons__c/PBS_AAAP_Offer_Deselect_Reject_Reasons__c.object-meta.xml
<CustomObject>
    <label>Offer Deselect Reject Reasons</label>
    <nameField>
        <label>Offer Deselect Reject Reasons Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Deselect Reject Reasons</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>