force-app/main/default/objects/PBS_AAAP_Offer_Deselect_Reject_Reasons__c/fields/PBS_AAAP_Action_Comments__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Action_Comments__c</fullName>
    <label>Action Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>