force-app/main/default/objects/PBS_AAAP_Offer_Deselect_Reject_Reasons__c/fields/PBS_AAAP_Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Action_Reason__c</fullName>
    <label>Action Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency Requirement Changes</fullName>
            </value>
            <value>
                <fullName>Agency Requirement Canceled</fullName>
            </value>
            <value>
                <fullName>Offer Has Changed</fullName>
            </value>
            <value>
                <fullName>Building Problems Found</fullName>
            </value>
            <value>
                <fullName>Offeror Found to be Debarred</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>