force-app/main/default/objects/PBS_AAAP_Offer_Deselect_Reject_Reasons__c/fields/PBS_AAAP_Agency_Requirement__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Agency_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Requirement</label>
    <referenceTo>PBS_AAAP_Agency_Requirement__c</referenceTo>
    <relationshipLabel>Offer Deselect Reject Reasons</relationshipLabel>
    <relationshipName>Offer_Deselect_Reject_Reasons</relationshipName>
    <type>Lookup</type>
</CustomField>